<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegisterActivity">

    <!--Toolbar-->
    <include layout="@layout/tool_bar" />

    <LinearLayout
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/activity_margin">
        <!--请输入昵称 -->
        <EditText
            android:id="@+id/et_nickname"
            style="@style/EditText"
            android:hint="@string/enter_nickname"
            android:maxLength="10" />

        <!--请输入手机号 -->
        <EditText
            android:id="@+id/et_phone"
            style="@style/EditText"
            android:hint="@string/enter_phone"
            android:maxLength="11"
            android:inputType="phone" />

        <!--请输入邮箱 -->
        <EditText
            android:id="@+id/et_email"
            style="@style/EditText"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress" />


        <!--请输入密码 -->
        <EditText
            android:id="@+id/et_password"
            style="@style/EditText"
            android:hint="@string/enter_password"
            android:maxLength="15"
            android:inputType="textPassword" />

        <!--确定密码 -->
        <EditText
            android:id="@+id/et_confirm_password"
            style="@style/EditText"
            android:hint="@string/enter_confirm_password"
            android:maxLength="15"
            android:inputType="textPassword" />

        <!--注册按钮-->
        <Button
            android:id="@+id/bt_register"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:text="@string/register"
            android:layout_marginTop="@dimen/padding_large"
            android:textColor="@drawable/selector_text_color_primary_reverse"
            android:background="@drawable/selector_color_primary" />
    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>