<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.ForgetPasswordActivity">

    <include layout="@layout/tool_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:padding="@dimen/activity_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <EditText
                android:id="@+id/et_username"
                style="@style/EditText"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginTop="0dp"
                android:hint="@string/enter_username"
                android:inputType="textEmailAddress" />

            <!-- style="?android:attr/borderlessButtonStyle" 添加这句主要防止还有边框 -->
            <Button
                android:id="@+id/bt_send_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                style="?android:attr/borderlessButtonStyle"
                android:text="@string/send_code"
                android:textColor="@drawable/selector_button_color_primary_light_grey" />
        </LinearLayout>

        <EditText
            android:id="@+id/et_code"
            style="@style/EditText"
            android:hint="@string/enter_code"
            android:maxLength="4"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/et_password"
            style="@style/EditText"
            android:hint="@string/enter_password"
            android:maxLength="15"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/et_confirm_password"
            style="@style/EditText"
            android:hint="@string/enter_confirm_password"
            android:maxLength="15"
            android:inputType="textPassword" />

        <!--找回密码-->
        <Button
            android:id="@+id/bt_forget_password"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:text="@string/activity_forget_password"
            android:layout_marginTop="@dimen/padding_large"
            android:background="@drawable/selector_color_primary"
            android:textColor="@drawable/selector_text_color_primary_reverse" />


    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>