<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <!--按钮容器-->
    <LinearLayout
        android:id="@+id/ll_local_music"
        style="@style/ItemContainer">
        <!--图标-->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_music" />

        <!--文本-->
        <TextView
            style="@style/ItemText"
            android:text="@string/local_music" />

        <!--更多图标-->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_right" />

    </LinearLayout>

    <!--分割线-->
    <include layout="@layout/divider_small" />

    <!--按钮容器-->
    <LinearLayout
        android:id="@+id/ll_download_manager"
        style="@style/ItemContainer">
        <!--图标-->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_music" />

        <!--文本-->
        <TextView
            style="@style/ItemText"
            android:text="@string/download_manger" />

        <!--更多图标-->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_right" />

    </LinearLayout>

    <!--分割线-->
    <include layout="@layout/divider_small" />

    <!--这里我们只是实现了前面 2个容器的点击功能实现  所以后面不需要添加容器id了-->

    <!--按钮容器-->
    <LinearLayout style="@style/ItemContainer">
        <!--图标-->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_music" />

        <!--文本
            最近播放 就是播放记录
        -->
        <TextView
            style="@style/ItemText"
            android:text="@string/play_history" />

        <!--更多图标-->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_down" />

    </LinearLayout>

    <!--分割线-->
    <include layout="@layout/divider_small" />

    <!--按钮容器-->
    <LinearLayout style="@style/ItemContainer">
        <!--图标-->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_music" />

        <!--文本 我的电台
            radio：电台（收音机）
        -->
        <TextView
            style="@style/ItemText"
            android:text="@string/my_radio" />

        <!--更多图标-->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_down" />

    </LinearLayout>

    <!--分割线-->
    <include layout="@layout/divider_small" />

    <!--按钮容器-->
    <LinearLayout style="@style/ItemContainer">
        <!--图标-->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_music" />

        <!--文本 我的收藏-->
        <TextView
            style="@style/ItemText"
            android:text="@string/my_collect" />

        <!--更多图标-->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_down" />

    </LinearLayout>

    <!--分割线-->
    <include layout="@layout/divider_small" />

    <!--按钮容器-->
    <LinearLayout style="@style/ItemContainer">
        <!--图标-->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_music" />

        <!--文本 减压的应用 不过我们这里没有实现这个功能，这是只是把按钮展示了出来-->
        <TextView
            style="@style/ItemText"
            android:text="@string/sati" />

        <!--更多图标-->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_down" />

    </LinearLayout>

</LinearLayout>